@@ -1,3 +1,6 @@
+13 June 2016: Wouter
+	- Fix #778: unbound 1.5.9: -h segfault (null deref).
+
 10 June 2016: Wouter
 	- And delete service.conf.shipped on uninstall.
 	- In unbound.conf directory: dir immediately changes to that directory,
